--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "DHT11/dht11.c" "WIFI/wifi.c" "MQTT/mqtt.c" "ADC/adc.c" "GPIO/gpio_setup.c" "main.c"
+idf_component_register(SRCS "DHT11/dht11.c" "WIFI/wifi.c" "MQTT/mqtt.c" "GPIO/gpio_setup.c" "NVS/treatnvs.c" "main.c"
                        INCLUDE_DIRS ".")
